# adguard-home-agent

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  .vulture_ignore  AGENTS.md  Dockerfile  README.md  compose.yml  debug.Dockerfile  mcp.compose.yml  pre_commit_output.txt  pyproject.toml
adguard_home_agent/: __init__.py  __main__.py  adguard_agent.py  adguard_api.py  adguard_mcp.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  graph_config.py  mcp.py  mcp_config.json  mcp_server.py  tools.py
adguard_home_agent/agent/: HEARTBEAT.md  IDENTITY.md
adguard_home_agent/agent_data/: A2A_AGENTS.md  CRON_LOG.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json
adguard_home_agent/skills/adguard-access/: SKILL.md
adguard_home_agent/skills/adguard-account/: SKILL.md
adguard_home_agent/skills/adguard-blocked-services/: SKILL.md
adguard_home_agent/skills/adguard-clients/: SKILL.md
adguard_home_agent/skills/adguard-dhcp/: SKILL.md
adguard_home_agent/skills/adguard-dns/: SKILL.md
adguard_home_agent/skills/adguard-docs/: SKILL.md
adguard_home_agent/skills/adguard-docs/reference/: adguard-android-tv_overview.html.md  adguard-android_overview.html.md  adguard-browser-extension_availability.md  adguard-browser-extension_overview.html.md  adguard-for-android.md  adguard-for-mac.md  adguard-for-mac_features_main.md  adguard-for-safari.md  adguard-for-safari_features_general.md  adguard-for-windows.md  adguard-ios_overview.html.md  adguard-mac_overview.html.md  adguard-windows_overview.html.md  blog_index.html.md  contacts.html.md  discuss.html.md  es.md  fr.md  general_ad-filtering_create-own-filters.md  general_ad-filtering_how-ad-blocking-works.md  general_extensions.md  general_license_what-is.md  get-adguard-for-free.html.md  index.md  ja.md  kb.md  ko.md  license.html.md  miscellaneous_contribute_translate_program.md  partners.html.md  removal.html.md  ru.md  (+6 more)
adguard_home_agent/skills/adguard-filtering/: SKILL.md
adguard_home_agent/skills/adguard-home-docs/: SKILL.md
adguard_home_agent/skills/adguard-mobile/: SKILL.md
adguard_home_agent/skills/adguard-profile/: SKILL.md
adguard_home_agent/skills/adguard-query-log/: SKILL.md
adguard_home_agent/skills/adguard-rewrites/: SKILL.md
adguard_home_agent/skills/adguard-settings/: SKILL.md
adguard_home_agent/skills/adguard-stats/: SKILL.md
adguard_home_agent/skills/adguard-system/: SKILL.md
adguard_home_agent/skills/adguard-tls/: SKILL.md
scripts/: test_entry_point.py  test_mcp_client.py  verify_adguard.py  verify_tools.py
tests/: test_adguard_coverage.py  test_adguard_home_agent_brute_force_coverage.py
(+33 files in other folders)
