[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adguard-home-agent"
version = "0.2.21"
description = "AdGuard Home MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.7",
]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.7",
]

agent = [
    "agent-utilities[agent,logfire]>=0.2.7",
]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.7",
]

[project.scripts]
adguard-mcp = "adguard_home_agent.mcp:mcp_server"
adguard-agent = "adguard_home_agent.agent:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
adguard_home_agent = [ "mcp_config.json", "skills/**", "agent/**",]
